<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button_race"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_race"
        />
    <Button
        android:id="@+id/button_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_type"
        />
    <Button
        android:id="@+id/button_move"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_move"
        />
    <Button
        android:id="@+id/button_ability"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_ability"
        />
    <Button
        android:id="@+id/button_item"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_item"
        />

</LinearLayout>