<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button_members"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_members"
        />
    <Button
        android:id="@+id/button_teams"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_teams"
        />
    <Button
        android:id="@+id/button_log"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_log"
        />
    <Button
        android:id="@+id/button_trainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_trainer"
        />
    <Button
        android:id="@+id/button_alias"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_alias"
        />

</LinearLayout>