<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_reload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/common_reload" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/common_save" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_homedir" />

    <EditText
        android:id="@+id/editText_userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textUri" />
    
    <TextView
        android:id="@+id/textView_homeDir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_homedir" />

    <EditText
        android:id="@+id/editText_homeDir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textUri" />

</LinearLayout>